/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto.lib";

import "google/protobuf/any.proto";

message repeatedBytes {
    repeated bytes bytesList = 1;
}

message repeatedUint {
    repeated uint32 uintList = 1;
}

message SubmitRingFunction {
    repeated repeatedBytes addressList = 1;
    repeated repeatedBytes uintArgsList = 2;
    repeated repeatedBytes repeatedUint = 3;
    repeated bool buyNoMoreThanBList = 4;
    repeated uint32 vList = 5;
    repeated bytes rList = 6;
    repeated bytes sList = 7;
    bytes feeRecipient = 8;
    uint32 feeSelection = 9;
}
